--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Yout business introduction</h1>
-<p>We will introduce your product sweet as every customer will use it.</p>
+<p>Your customers will be 100% satisfied.</p>
 
 </body>
 </html>
